# interpretability

./: LICENSE
.dvc/: config
interpretability/: data.dvc  pyproject.toml
interpretability/data/: .gitignore  abc_examples_v4.json.dvc  examples_v4.json.dvc  worldcities.csv.dvc
interpretability/data/mean_attn_hook_v_activation_values/: .gitignore
interpretability/factual_recall_gpt2_small/: dvc.yaml  params.yaml
interpretability/factual_recall_gpt2_small/data/: .gitignore
interpretability/factual_recall_gpt2_small/data/attn_head_activation_patching_on_last_token/: .gitignore
interpretability/factual_recall_gpt2_small/data/attn_head_path_patching_on_last_token/: .gitignore
interpretability/factual_recall_gpt2_small/data/attn_head_path_patching_step1/: .gitignore
interpretability/prepare_data_gpt2_small/: dvc.yaml  params.yaml
interpretability/src/: activation_patching.py  dataset_values_accessors.py  generate_mean_activation_values.py  model_patching_hooks.py  path_patching.py  target_metrics.py  visualization.py
interpretability/steps/factual_recall_gpt2_small/: attn_head_activation_patching_on_last_token.py  attn_head_path_patching_aggregate.py  attn_head_path_patching_step.py  attn_head_path_patching_step1.py
interpretability/steps/prepare_data_gpt2_small/: calculate_mean_attn_hook_v_activation_values.py  prepare_gpt2_small_transformer_lens.py
